# poo

./: README.md
ayudantias/ay05/: solucion.cc
clases/poo-00-search/: 10000.txt  40000.txt  5000.txt  80000.txt  binsearch.cc  seqsearch.cc  sort.cc  sortint.cc
clases/poo-01-sort/: 20000.txt  binsearch_stl.cc  binsearch_stl_array.cc  sortcpp.cc
clases/poo-02-ptr/: ptr-array.cc  ptr-array2.cc  ptr-func.cc  ptr-scope.cc  ptr.cc  swap.cc
clases/poo-03-class/: circle.cc  complex.cc  rect.cc
clases/poo-04-memory/: leak.cc  new.cc  stack.cc  vector-leak.cc  vector.cc
clases/poo-05-design/: area-assert.cc  complex2.cc  counter-encapsulated.cc  counter-public.cc  division-assert.cc
clases/poo-06-inheritance/: canvas.h  cuadrado-herencia-point.cc  cuadrado-herencia.cc  cuadrado-point.cc  performance.cc  pokemon-cast.cc  ratones-this.cc  ratones.cc  rectangle.cc  timing.h
clases/poo-07-polimorfism/: animal-ptr.cc  animal-virt.cc  animal.cc  figuras-ptr.cc  figuras-simple.cc  figuras.cc  integral-dream.cc  integral.cc  pokemon.cc
clases/poo-08-stack-queue/: cola.cc  evaluate.cc  loadbalance.cc  mystack.cc  parentesis.cc  persona-warn.cc  persona.cc  stack.cc  stackstring.cc  vector-it.cc
solemnes/: solemne1-array.cc  solemne1.cc
tutorial_fltk/: tutorial.tex
tutorial_fltk/examples/: CMakeLists.txt  button.cxx  hello.cc  input-output.cxx  movable.cxx
tutorial_fltk/examples/click-n-drag/: CMakeLists.txt
tutorial_fltk/examples/hello/: CMakeLists.txt
tutorial_fltk/examples/input-output/: CMakeLists.txt
tutorial_fltk/examples/toggle-button/: CMakeLists.txt
(+20 files in other folders)
